# manufacturing_library

client/: package-lock.json  package.json
client/src/: App.js
client/src/app/components/global/: index.jsx
client/src/app/components/icons/: index.jsx
client/src/app/components/icons/default-app/: index.jsx
client/src/app/components/window/: container.jsx  index.jsx  styled.jsx
client/src/app/components/window-button/: index.jsx
client/src/app/components/window-footer/: container.jsx  index.jsx  styled.jsx
client/src/app/components/window-header/: container.jsx  index.jsx  styled.jsx
client/src/app/components/window-title/: index.jsx
client/src/app/settings/: settings.js
server/: db.sqlite3  pyproject.toml
server/common/fields/: __init__.py  lower_case_char_field.py
server/common/fields/mixins/: __init__.py  lower_case_field_mixin.py
server/deviations/: admin.py  urls.py  views.py
server/deviations/migrations/: 0001_initial.py  0002_alter_basedeviation_options_and_more.py
server/deviations/models/: __init__.py  base_deviation.py  base_deviation_grade.py  grade_range.py
server/deviations/serializers/: __init__.py  base_deviation_serializer.py  grade_range_serializer.py
server/locale/ru/LC_MESSAGES/: django.mo  django.po
server/server/: settings.py  urls.py
